@@ -443,7 +443,7 @@ function __vboxDrawPreview(fromSelf,state) {
 		// Error or machine not running
 		if(this.height <= 1) {
 
-			$('#vboxDetailsPreviewImg').css({'display':'none'}).attr('src','about:blank');
+			$('#vboxDetailsPreviewImg').css({'display':'none'}).attr('src','images/vbox/blank.gif');
 			$('#vboxDetailsPreviewVMName').css('display','');
 			
 			var width = $('#vboxIndex').data('vboxConfig')['previewWidth'];
