@@ -17,8 +17,10 @@ session_cache_limiter('private_no_expire');
 
 // Check for valid session
 global $_SESSION;
-session_init();
-if(!@$_SESSION['valid']) return;
+session_init(true);
+if(!@$_SESSION['valid']) {
+	return;	
+}
 
 // Clean request
 $_REQUEST = array_merge(@$_GET,@$_POST);
@@ -206,3 +208,4 @@ try {
 		echo("</pre>");
 	}
 }
+
